RESOLVED FIXED155329
[ES6] Instanceof isn't spec compliant when the RHS is a Proxy with a target that is a function
https://bugs.webkit.org/show_bug.cgi?id=155329
Summary [ES6] Instanceof isn't spec compliant when the RHS is a Proxy with a target t...
Saam Barati
Reported 2016-03-10 15:14:56 PST
({} instance (new Proxy(function(){}, {})) should not throw a type error.
Attachments
patch (11.76 KB, patch)
2016-03-10 16:11 PST, Saam Barati
mark.lam: review+
Saam Barati
Comment 1 2016-03-10 16:11:22 PST
Mark Lam
Comment 2 2016-03-10 16:19:27 PST
Comment on attachment 273644 [details] patch r=me
Saam Barati
Comment 3 2016-03-10 16:43:58 PST
Note You need to log in before you can comment on or make changes to this bug.