Source/JavaScriptCore/runtime/ProxyObject.h
@@ -40,17 +40,20 @@ public:
     // property name enumeration caching.
     const static unsigned StructureFlags = Base::StructureFlags | OverridesGetOwnPropertySlot | TypeOfShouldCallGetCallData | InterceptsGetOwnPropertySlotByIndexEvenWhenLengthIsNotZero | OverridesGetPropertyNames | ProhibitsPropertyCaching;
 
-    static ProxyObject* create(ExecState* exec, Structure* structure, JSValue target, JSValue handler)
+    static ProxyObject* create(ExecState* exec, JSGlobalObject* globalObject, JSValue target, JSValue handler)
     {
         VM& vm = exec->vm();
-        ProxyObject* proxy = new (NotNull, allocateCell<ProxyObject>(vm.heap)) ProxyObject(vm, structure);
+        ProxyObject* proxy = new (NotNull, allocateCell<ProxyObject>(vm.heap)) ProxyObject(vm, ProxyObject::structureForTarget(globalObject, target));
         proxy->finishCreation(vm, exec, target, handler);
         return proxy;
     }
 
-    static Structure* createStructure(VM& vm, JSGlobalObject* globalObject, JSValue prototype)
+    static Structure* createStructure(VM& vm, JSGlobalObject* globalObject, JSValue prototype, bool isCallable)
     {
-        Structure* result = Structure::create(vm, globalObject, prototype, TypeInfo(ProxyObjectType, StructureFlags), info(), NonArray | MayHaveIndexedAccessors);
+        unsigned flags = StructureFlags;
+        if (isCallable)
+            flags |= (ImplementsHasInstance | ImplementsDefaultHasInstance);
+        Structure* result = Structure::create(vm, globalObject, prototype, TypeInfo(ProxyObjectType, flags), info(), NonArray | MayHaveIndexedAccessors);
         result->setIsQuickPropertyAccessAllowedForEnumeration(false);
         RELEASE_ASSERT(!result->canAccessPropertiesQuicklyForEnumeration());
         RELEASE_ASSERT(!result->canCachePropertyNameEnumerator());
@@ -72,6 +75,7 @@ public:
 private:
     ProxyObject(VM&, Structure*);
     void finishCreation(VM&, ExecState*, JSValue target, JSValue handler);
+    static Structure* structureForTarget(JSGlobalObject*, JSValue target);
 
     static bool getOwnPropertySlot(JSObject*, ExecState*, PropertyName, PropertySlot&);
     static bool getOwnPropertySlotByIndex(JSObject*, ExecState*, unsigned propertyName, PropertySlot&);
